# mkjson

./: Cargo.toml  README.md
docs/: design-rationale.md  directive-syntax.md  mkjson.md  mkjsonrpc.md
docs/reference/: directive-syntax.md  mkjson.md
src/: assignment.rs  compiler.rs  composer.rs  directive.rs  lib.rs  main.rs  node.rs  parser.rs  validator.rs
tests/: examples.rs  readme_examples.rs
